compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__pipe_variable_shadow.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 113
expression: "\n@external(javascript, \"module\", \"string\")\nfn name() -> String\n\npub fn main() {\n  let name = name()\n  name\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "module", "string")
fn name() -> String

pub fn main() {
  let name = name()
  name
}


----- COMPILED JAVASCRIPT
import { string as name } from "module";

export function main() {
  let name$1 = name();
  return name$1;
}
