compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__private_attribute_erlang.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 190
expression: "\n@external(erlang, \"one\", \"one_erl\")\nfn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "one_erl")
fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

function one(x) {
  throw makeError(
    "todo",
    FILEPATH,
    "my/mod",
    4,
    "one",
    "`todo` expression evaluated. This code has not yet been implemented.",
    {}
  )
}

export function main() {
  return one(1);
}
