compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__private_attribute_javascript.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 206
expression: "\n@external(javascript, \"./one.mjs\", \"oneJs\")\nfn one(x: Int) -> Int {\n  todo\n}\n\npub fn main() {\n  one(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./one.mjs", "oneJs")
fn one(x: Int) -> Int {
  todo
}

pub fn main() {
  one(1)
}


----- COMPILED JAVASCRIPT
import { oneJs as one } from "./one.mjs";

export function main() {
  return one(1);
}
