compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__same_module_multiple_imports.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 55
expression: "\n@external(javascript, \"./the/module.mjs\", \"one\")\npub fn one() -> Nil\n\n@external(javascript, \"./the/module.mjs\", \"two\")\npub fn two() -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "./the/module.mjs", "one")
pub fn one() -> Nil

@external(javascript, "./the/module.mjs", "two")
pub fn two() -> Nil


----- COMPILED JAVASCRIPT
import { one, two } from "./the/module.mjs";

export { one, two };
