compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__same_name_external.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 46
expression: "\n@external(javascript, \"thingy\", \"fetch\")\npub fn fetch(request: Nil) -> Nil"
snapshot_kind: text
---
----- SOURCE CODE

@external(javascript, "thingy", "fetch")
pub fn fetch(request: Nil) -> Nil

----- COMPILED JAVASCRIPT
import { fetch } from "thingy";

export { fetch };
