compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__externals__type_.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/externals.rs
assertion_line: 5
expression: pub type Thing
snapshot_kind: text
---
----- SOURCE CODE
pub type Thing

----- COMPILED JAVASCRIPT
export {}
